fix: width in footnotes was too big

--- a/quartz/styles/custom.scss
+++ b/quartz/styles/custom.scss
@@ -205,10 +205,6 @@ ol {
     & > figure {
       display: inline; // Else it's misaligned with top of table
     }
-
-    .footnotes & {
-      width: 100%; // Helps orient e.g. tables in footnotes
-    }
   }
 }
 
